--- a/src/Compilers/Compilers.Common/Compilers.Common.csproj
+++ b/src/Compilers/Compilers.Common/Compilers.Common.csproj
@@ -1,40 +1,14 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+﻿<Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>8.0.30703</ProductVersion>
-    <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{283A7585-ECF4-405A-824F-AF926C16C78C}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>VBF.Compilers</RootNamespace>
-    <AssemblyName>VBF.Compilers.Common</AssemblyName>
-    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile />
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
+    <TargetFramework>net6.0</TargetFramework>
+    <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
     <OutputPath>..\..\..\bin\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <Prefer32Bit>false</Prefer32Bit>
+    <LangVersion>10</LangVersion>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>..\..\..\bin\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <Prefer32Bit>false</Prefer32Bit>
-    <DocumentationFile>..\..\..\bin\VBF.Compilers.Common.XML</DocumentationFile>
-  </PropertyGroup>
-  <PropertyGroup>
+
+<PropertyGroup>
     <SignAssembly>false</SignAssembly>
   </PropertyGroup>
   <PropertyGroup>
@@ -43,42 +17,10 @@
   <PropertyGroup>
     <DelaySign>true</DelaySign>
   </PropertyGroup>
-  <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="CodeContract.cs" />
-    <Compile Include="CompilationError.cs" />
-    <Compile Include="CompilationErrorInfo.cs" />
-    <Compile Include="CompilationErrorInfoCollection.cs" />
-    <Compile Include="CompilationErrorList.cs" />
-    <Compile Include="CompilationErrorManager.cs" />
-    <Compile Include="CompilationStage.cs" />
-    <Compile Include="Common\DepthFirstSearch.cs" />
-    <Compile Include="Common\DisjointSets.cs" />
-    <Compile Include="Common\EditDistanceCalculator.cs" />
-    <Compile Include="Common\PriorityQueue.cs" />
-    <Compile Include="Common\StringHelpers.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RevertPoint.cs" />
-    <Compile Include="RevertPointCollection.cs" />
-    <Compile Include="SourceLocation.cs" />
-    <Compile Include="SourceReader.cs" />
-    <Compile Include="SourceSpan.cs" />
-    <Compile Include="StringBuilderReader.cs" />
-  </ItemGroup>
-  <ItemGroup>
+<ItemGroup>
     <None Include="..\Key\VBF.Public.snk">
       <Link>VBF.Public.snk</Link>
     </None>
   </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
+
 </Project>
