--- a/src/Compilers/Compilers.Parsers.Combinators/Compilers.Parsers.Combinators.csproj
+++ b/src/Compilers/Compilers.Parsers.Combinators/Compilers.Parsers.Combinators.csproj
@@ -1,39 +1,23 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+﻿<Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>8.0.30703</ProductVersion>
-    <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{57E34138-CEE5-422B-8EA2-CB7A9574805D}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>VBF.Compilers.Parsers.Combinators</RootNamespace>
-    <AssemblyName>VBF.Compilers.Parsers.Combinators</AssemblyName>
-    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile />
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
+    <TargetFramework>net6.0</TargetFramework>
+    <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
     <OutputPath>..\..\..\bin\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <Prefer32Bit>false</Prefer32Bit>
+    <LangVersion>10</LangVersion>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>..\..\..\bin\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <Prefer32Bit>false</Prefer32Bit>
-  </PropertyGroup>
-  <PropertyGroup>
+
+<ItemGroup>
+    <ProjectReference Include="..\Compilers.Common\Compilers.Common.csproj">
+      <Name>Compilers.Common</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Compilers.Scanners\Compilers.Scanners.csproj">
+      <Name>Compilers.Scanners</Name>
+    </ProjectReference>
+  </ItemGroup>
+
+<PropertyGroup>
     <SignAssembly>false</SignAssembly>
   </PropertyGroup>
   <PropertyGroup>
@@ -42,54 +26,10 @@
   <PropertyGroup>
     <DelaySign>true</DelaySign>
   </PropertyGroup>
-  <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="..\Compilers.Common\CodeContract.cs">
-      <Link>CodeContract.cs</Link>
-    </Compile>
-    <Compile Include="AlternationParser.cs" />
-    <Compile Include="AnyTokenParser.cs" />
-    <Compile Include="ConvertHelper.cs" />
-    <Compile Include="ConcatenationParser.cs" />
-    <Compile Include="EndOfStreamParser.cs" />
-    <Compile Include="ErrorCorrection.cs" />
-    <Compile Include="MappingParser.cs" />
-    <Compile Include="Parser.cs" />
-    <Compile Include="ParserContext.cs" />
-    <Compile Include="ParserFrame.cs" />
-    <Compile Include="ParserReference.cs" />
-    <Compile Include="ParserRunner.cs" />
-    <Compile Include="Parsers.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RepeatParserListNode.cs" />
-    <Compile Include="Result.cs" />
-    <Compile Include="SucceedParser.cs" />
-    <Compile Include="TokenParser.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Compilers.Common\Compilers.Common.csproj">
-      <Project>{283A7585-ECF4-405A-824F-AF926C16C78C}</Project>
-      <Name>Compilers.Common</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Compilers.Scanners\Compilers.Scanners.csproj">
-      <Project>{F8ECBF53-C1B2-412B-8322-9E3D6AAC66ED}</Project>
-      <Name>Compilers.Scanners</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
+<ItemGroup>
     <None Include="..\Key\VBF.Public.snk">
       <Link>VBF.Public.snk</Link>
     </None>
   </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
+
 </Project>
