--- a/src/Compilers/Compilers.Parsers/Compilers.Parsers.csproj
+++ b/src/Compilers/Compilers.Parsers/Compilers.Parsers.csproj
@@ -1,40 +1,23 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+﻿<Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>8.0.30703</ProductVersion>
-    <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{323A8312-8E82-4A81-91CC-2D60F85AE751}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>VBF.Compilers.Parsers</RootNamespace>
-    <AssemblyName>VBF.Compilers.Parsers</AssemblyName>
-    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile />
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
+    <TargetFramework>net6.0</TargetFramework>
+    <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
     <OutputPath>..\..\..\bin\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <Prefer32Bit>false</Prefer32Bit>
+    <LangVersion>10</LangVersion>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>..\..\..\bin\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <Prefer32Bit>false</Prefer32Bit>
-    <DocumentationFile>..\..\..\bin\VBF.Compilers.Parsers.XML</DocumentationFile>
-  </PropertyGroup>
-  <PropertyGroup>
+
+<ItemGroup>
+    <ProjectReference Include="..\Compilers.Common\Compilers.Common.csproj">
+      <Name>Compilers.Common</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Compilers.Scanners\Compilers.Scanners.csproj">
+      <Name>Compilers.Scanners</Name>
+    </ProjectReference>
+  </ItemGroup>
+
+<PropertyGroup>
     <SignAssembly>false</SignAssembly>
   </PropertyGroup>
   <PropertyGroup>
@@ -43,74 +26,10 @@
   <PropertyGroup>
     <DelaySign>true</DelaySign>
   </PropertyGroup>
-  <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="..\Compilers.Common\CodeContract.cs">
-      <Link>CodeContract.cs</Link>
-    </Compile>
-    <Compile Include="AlternationProduction.cs" />
-    <Compile Include="DefaultValueContainer.cs" />
-    <Compile Include="Generator\ClosureVisitor.cs" />
-    <Compile Include="PanicRecoverException.cs" />
-    <Compile Include="ParserHeadCleaner.cs" />
-    <Compile Include="AmbiguityAggregator.cs" />
-    <Compile Include="ConcatenationProduction.cs" />
-    <Compile Include="EmptyProduction.cs" />
-    <Compile Include="EndOfStream.cs" />
-    <Compile Include="ErrorRecord.cs" />
-    <Compile Include="Generator\SymbolConversion.cs" />
-    <Compile Include="Generator\TransitionTable.cs" />
-    <Compile Include="Grammar.cs" />
-    <Compile Include="IProduction.cs" />
-    <Compile Include="IProductionVisitor.cs" />
-    <Compile Include="MappingProduction.cs" />
-    <Compile Include="ParserBase.cs" />
-    <Compile Include="ParserEngine.cs" />
-    <Compile Include="ParserHead.cs" />
-    <Compile Include="ParsingFailureException.cs" />
-    <Compile Include="Production.cs" />
-    <Compile Include="ProductionBase.cs" />
-    <Compile Include="Generator\ProductionInfo.cs" />
-    <Compile Include="Generator\ProductionInfoManager.cs" />
-    <Compile Include="Generator\GeneratorVisitors.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ReduceVisitor.cs" />
-    <Compile Include="RepeatParserListNode.cs" />
-    <Compile Include="ResultInfo.cs" />
-    <Compile Include="SetHelpers.cs" />
-    <Compile Include="Generator\LR0Edge.cs" />
-    <Compile Include="Generator\LR0Item.cs" />
-    <Compile Include="Generator\LR0Model.cs" />
-    <Compile Include="Generator\LR0State.cs" />
-    <Compile Include="Generator\ReduceAction.cs" />
-    <Compile Include="StackNode.cs" />
-    <Compile Include="SyntaxErrors.cs" />
-    <Compile Include="Terminal.cs" />
-  </ItemGroup>
-  <ItemGroup>
+<ItemGroup>
     <None Include="..\Key\VBF.Public.snk">
       <Link>VBF.Public.snk</Link>
     </None>
   </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Compilers.Common\Compilers.Common.csproj">
-      <Project>{283A7585-ECF4-405A-824F-AF926C16C78C}</Project>
-      <Name>Compilers.Common</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Compilers.Scanners\Compilers.Scanners.csproj">
-      <Project>{F8ECBF53-C1B2-412B-8322-9E3D6AAC66ED}</Project>
-      <Name>Compilers.Scanners</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
+
 </Project>
