--- a/src/Compilers/Compilers.Scanners/Compilers.Scanners.csproj
+++ b/src/Compilers/Compilers.Scanners/Compilers.Scanners.csproj
@@ -1,40 +1,20 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+﻿<Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>8.0.30703</ProductVersion>
-    <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{F8ECBF53-C1B2-412B-8322-9E3D6AAC66ED}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>VBF.Compilers.Scanners</RootNamespace>
-    <AssemblyName>VBF.Compilers.Scanners</AssemblyName>
-    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile />
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
+    <TargetFramework>net6.0</TargetFramework>
+    <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
     <OutputPath>..\..\..\bin\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <Prefer32Bit>false</Prefer32Bit>
+    <LangVersion>10</LangVersion>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>..\..\..\bin\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <Prefer32Bit>false</Prefer32Bit>
-    <DocumentationFile>..\..\..\bin\VBF.Compilers.Scanners.XML</DocumentationFile>
-  </PropertyGroup>
-  <PropertyGroup>
+
+<ItemGroup>
+    <ProjectReference Include="..\Compilers.Common\Compilers.Common.csproj">
+      <Name>Compilers.Common</Name>
+    </ProjectReference>
+  </ItemGroup>
+
+<PropertyGroup>
     <SignAssembly>false</SignAssembly>
   </PropertyGroup>
   <PropertyGroup>
@@ -43,71 +23,10 @@
   <PropertyGroup>
     <DelaySign>true</DelaySign>
   </PropertyGroup>
-  <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="..\Compilers.Common\CodeContract.cs">
-      <Link>CodeContract.cs</Link>
-    </Compile>
-    <Compile Include="AlternationCharSetExpression.cs" />
-    <Compile Include="AlternationExpression.cs" />
-    <Compile Include="CacheQueue.cs" />
-    <Compile Include="CharSetExpressionBuilder.cs" />
-    <Compile Include="ConcatenationExpression.cs" />
-    <Compile Include="EmptyExpression.cs" />
-    <Compile Include="FiniteAutomationEngine.cs" />
-    <Compile Include="ForkableScannerBuilder.cs" />
-    <Compile Include="ForkableScannerCore.cs" />
-    <Compile Include="ForkableScanner.cs" />
-    <Compile Include="Generator\CompactCharSetManager.cs" />
-    <Compile Include="Generator\DFAEdge.cs" />
-    <Compile Include="Generator\DFAModel.cs" />
-    <Compile Include="Generator\DFAState.cs" />
-    <Compile Include="Generator\NFAConverter.cs" />
-    <Compile Include="Generator\NFAEdge.cs" />
-    <Compile Include="Generator\NFAModel.cs" />
-    <Compile Include="Generator\NFAState.cs" />
-    <Compile Include="Generator\CompressedTransitionTable.cs" />
-    <Compile Include="HistoryList.cs" />
-    <Compile Include="KleeneStarExpression.cs" />
-    <Compile Include="Lexeme.cs" />
-    <Compile Include="LexemeRange.cs" />
-    <Compile Include="LexemeValue.cs" />
-    <Compile Include="Lexer.cs" />
-    <Compile Include="Lexicon.cs" />
-    <Compile Include="PeekableScanner.cs" />
-    <Compile Include="RegularExpressionType.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RegularExpression.cs" />
-    <Compile Include="RegularExpressionConverter.cs" />
-    <Compile Include="Scanner.cs" />
-    <Compile Include="ScannerException.cs" />
-    <Compile Include="ScannerInfo.cs" />
-    <Compile Include="StringLiteralExpression.cs" />
-    <Compile Include="SymbolExpression.cs" />
-    <Compile Include="Token.cs" />
-    <Compile Include="TokenInfo.cs" />
-    <Compile Include="UnitTestVisibility.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Compilers.Common\Compilers.Common.csproj">
-      <Project>{283A7585-ECF4-405A-824F-AF926C16C78C}</Project>
-      <Name>Compilers.Common</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
+<ItemGroup>
     <None Include="..\Key\VBF.Public.snk">
       <Link>VBF.Public.snk</Link>
     </None>
   </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
+
 </Project>
